tests/ui/feature-gates/feature-gate-unsafe-binders.rs
#[cfg(any())]
fn test() {
    let x: unsafe<> ();
    //~^ ERROR unsafe binder types are experimental
}

fn main() {}
